--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.4.0",
+    "@vueform/multiselect": "^2.1.2",
     "core-js": "^3.6.5",
+    "mini-svg-data-uri": "^1.3.3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
