--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.4.0",
     "@vueform/multiselect": "^2.1.2",
+    "chart.js": "^3.5.1",
     "core-js": "^3.6.5",
     "mini-svg-data-uri": "^1.3.3",
     "vue": "^3.0.0",
